finished team layout

--- a/assets/styles/custom-main.css
+++ b/assets/styles/custom-main.css
@@ -756,6 +756,14 @@
 	}
 }
 
+.section-team-row2 {
+	padding-top: 40px;
+}
+.section-team-row3 {
+	padding-top: 40px;
+	padding-bottom: 100px;
+}
+
   
   
   /* .portfolio-columns-fw .portfolio-item figure figcaption:hover, .portfolio-columns-boxed .portfolio-item figure figcaption:hover {
