fixed about page

--- a/assets/styles/custom-main.css
+++ b/assets/styles/custom-main.css
@@ -55,9 +55,7 @@
 	}
 
 	.about-images-first {
-		/* margin: auto;
-		padding: 20px;
-		float: left; */
+		padding-bottom: 20px;
 	}
 
 	.about-first {
