--- a/assets/styles/custom-main.css
+++ b/assets/styles/custom-main.css
@@ -304,6 +304,21 @@
 	color: #777;
   }
 
+  .img-responsive-1 {
+	/* display: block; */
+    max-width: 100%;
+    height: auto;
+  }
+
+  @media (max-width: 770px) {
+	.hero-lead-1{
+		font-size: 2.5em;
+	}  
+	.mobile-responsive {
+		display: none;
+	}
+  }
+
 
   .portfolio-columns-fw .portfolio-item figure figcaption .p-content h2:last-child,
 .portfolio-columns-boxed .portfolio-item figure figcaption .p-content h2:last-child,
@@ -776,70 +791,7 @@
 	padding-bottom: 15px;
 
 }
-
-
-  
-  
-  /* .portfolio-columns-fw .portfolio-item figure figcaption:hover, .portfolio-columns-boxed .portfolio-item figure figcaption:hover {
-	opacity: 1;
-  }
-  
-  .portfolio-columns-fw .portfolio-item figure figcaption:hover .p-content, .portfolio-columns-boxed .portfolio-item figure figcaption:hover .p-content {
-	bottom: 45px;
-  }
-  
-  .portfolio-columns-fw .portfolio-item figure figcaption:hover .open-btn, .portfolio-columns-boxed .portfolio-item figure figcaption:hover .open-btn {
-	top: 0;
-  }
-  
-  .portfolio-columns-fw .p-wrapper, .portfolio-columns-boxed .p-wrapper {
-	display: block;
-	position: relative;
-	width: 100%;
-	background: gray;
-	overflow: hidden;
-	float: left;
-  }
-  
-  .portfolio-columns-fw .p-wrapper img, .portfolio-columns-boxed .p-wrapper img {
-	max-width: 100%;
-	width: 100%;
-	height: auto;
-	-webkit-transition: -webkit-transform .3s;
-	transition: -webkit-transform .3s;
-	transition: transform .3s;
-	transition: transform .3s, -webkit-transform .3s;
-  }
-  
-  .portfolio-columns-fw .p-wrapper:hover img, .portfolio-columns-boxed .p-wrapper:hover img, .portfolio-columns-fw .p-wrapper:active img, .portfolio-columns-boxed .p-wrapper:active img {
-	-webkit-transform: scale(1.07);
-			transform: scale(1.07);
-  }
-  
-  .portfolio-columns-fw .p-wrapper:hover .open-btn, .portfolio-columns-boxed .p-wrapper:hover .open-btn, .portfolio-columns-fw .p-wrapper:active .open-btn, .portfolio-columns-boxed .p-wrapper:active .open-btn {
-	top: 0;
-  } */
-
-  /* Custome Media Query Breakpoints */
-
-/* Small devices (landscape phones, 576px and up) */
-
-
-@media (max-width: $screen-md) {
-	.main-demo-hero,
-	.fs-video-hero,
-	.fw-video-hero,
-	.freelancer-hero {
-		background-attachment: initial;
-	} 
-
-	.animated-hero,
-	.agency2-hero,
-	.web-app-hero  {
-		background-attachment: initial;
-	}
-
-
+                                                                                                     
 	.landing-hero {
 
 		.form-wrapper {
