--- a/assets/styles/custom-main.css
+++ b/assets/styles/custom-main.css
@@ -311,12 +311,16 @@
   }
 
   @media (max-width: 770px) {
-	.hero-lead-1{
-		font-size: 2.5em;
+	.fs-video-hero{
+		display: none;
 	}  
 	.mobile-responsive {
 		display: none;
 	}
+	.t-description {
+		display: none;
+	}
+
   }
 
 
@@ -790,136 +794,4 @@
 	font-size: 25px;
 	padding-bottom: 15px;
 
-}
-                                                                                                     
-	.landing-hero {
-
-		.form-wrapper {
-			margin-top: $ws-m;
-			padding-left: 35px;
-			padding-right: 35px;
-		}
-	} 
-
-	.fw-slider-hero {
-		
-		.fw-slide-1,
-		.fw-slide-3 {
-
-			.hero-content-wrapper {
-
-				.hero-content {
-
-					.hero-lead {
-						font-size: 3em;
-						letter-spacing: 15px;
-					}
-				}
-			}
-		} //
-
-		.fw-slide-2 {
-
-			.hero-content-wrapper {
-
-				.hero-content {
-
-					.hero-lead {
-						font-size: 4em;
-					}
-				}
-			}
-		} 
-	} 
-} 
-
-@media (max-width: $screen-sm) {
-	.main-demo-hero,
-	.fs-video-hero,
-	.fw-video-hero {
-
-		.hero-content-wrapper {
-
-			.hero-content {
-
-				.hero-lead {
-					font-size: 2.5em;
-
-					br {
-						display: none;
-					}
-				}
-
-				.hero-subheading {
-					margin-top: $ws-s;
-				}
-			}
-		}
-	}
-
-	.fs-slider-hero {
-		
-		.fs-slide-1,
-		.fs-slide-2,  {
-
-			.hero-content {
-
-				.hero-lead {
-					font-size: 3em;
-				}
-
-				.hero-subheading {
-					margin-top: $ws-s;
-				}
-			}
-		}
-
-	
-	}
-
-	.mobile-responsive {
-		display: none;
-	}
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 770px) { 
-	.mobile-responsive {
-		display: none;
-	}
-
-	.fs-video-hero
-	.hero-content-wrapper
-	.hero-content
-	.hero-lead {
-		font-size: 2.5em;
-	}
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-	.mobile-responsive {
-		display: none;
-	}
-
-	.fs-video-hero
-	.hero-content-wrapper
-	.hero-content
-	.hero-lead {
-		font-size: 2.5em;
-	}
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-	.mobile-responsive {
-		display: none;
-	}
-
-	.fs-video-hero
-	.hero-content-wrapper
-	.hero-content
-	.hero-lead {
-		font-size: 2.5em;
-	}
 }
